# Deribit_Management_System

./: README.md
GoQuant_test_api/: CMakeLists.txt  README.md
GoQuant_test_api/build3/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  DeribitOrderManagement.sln  Deribit_Management_System.vcxproj  Deribit_Management_System.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
GoQuant_test_api/build3/Deribit_Management_System.dir/Release/: Deribit_Management_System.exe.recipe
GoQuant_test_api/build3/Deribit_Management_System.dir/Release/Deribit_.D4A832A2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  Deribit_Management_System.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
GoQuant_test_api/build3/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
GoQuant_test_api/build3/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.read.1.tlog
GoQuant_test_api/build3/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
GoQuant_test_api/build3/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
GoQuant_test_api/include/: config.h  header.h
GoQuant_test_api/src/: main.cpp  order_manager.cpp  utilities.cpp  websocket_server.cpp
